[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/menu/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/button_yellow/button_yellow.tres" type="Theme" id=2]
[ext_resource path="res://assets/ui/general/general_ui.tres" type="Theme" id=3]
[ext_resource path="res://assets/ui/fonts/font_small_button.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/ui/fonts/data/kenney_thick.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/ui/panels/metal_dark/panel_green_metal_dark.tres" type="StyleBox" id=6]
[ext_resource path="res://assets/ui/fonts/font_ui_small.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/ui/buttons/big/yellow/button_yellow_big.tres" type="Theme" id=8]
[ext_resource path="res://assets/ui/buttons/big/blue/button_blue_big.tres" type="Theme" id=9]
[ext_resource path="res://assets/ui/buttons/small/red/button_red_small.tres" type="Theme" id=10]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 5 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnMatchmaking" type="Button" parent="."]
anchor_left = 0.4
anchor_top = 0.4
anchor_right = 0.6
anchor_bottom = 0.6
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 8 )
text = "BATTLE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnPractice" type="Button" parent="BtnMatchmaking"]
anchor_left = 0.5
anchor_top = 0.925
anchor_right = 0.5
anchor_bottom = 0.925
margin_top = 50.0
grow_horizontal = 2
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
disabled = true
text = "Practice"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnEditor" type="Button" parent="."]
anchor_left = 0.778
anchor_top = 0.818
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 13.3279
margin_top = 0.199982
margin_right = -29.0
margin_bottom = -51.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource( 9 )
custom_fonts/font = SubResource( 3 )
disabled = true
text = "Map Editor"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LblEditorGuestHint" type="Label" parent="BtnEditor"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Create an Account to access the map editor"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectMap" type="OptionButton" parent="."]
margin_left = 65.0
margin_top = 322.0
margin_right = 202.0
margin_bottom = 352.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelAccount" type="PanelContainer" parent="."]
margin_right = 225.0
margin_bottom = 106.0
custom_styles/panel = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelAccount"]
margin_left = 20.0
margin_top = 20.0
margin_right = 205.0
margin_bottom = 116.0
alignment = 1

[node name="LblGuest" type="Label" parent="PanelAccount/VBoxContainer"]
margin_right = 185.0
margin_bottom = 20.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.117647, 0.117647, 0.117647, 1 )
custom_fonts/font = ExtResource( 7 )
text = "GUEST"
align = 1

[node name="LblDisplayName" type="Label" parent="PanelAccount/VBoxContainer"]
margin_top = 24.0
margin_right = 185.0
margin_bottom = 48.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.117647, 0.117647, 0.117647, 1 )
text = "LOADING..."
align = 1

[node name="LblPlayCount" type="Label" parent="PanelAccount/VBoxContainer"]
margin_top = 52.0
margin_right = 185.0
margin_bottom = 72.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.117647, 0.117647, 0.117647, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Played: 0"

[node name="LblWinCount" type="Label" parent="PanelAccount/VBoxContainer"]
margin_top = 76.0
margin_right = 185.0
margin_bottom = 96.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.117647, 0.117647, 0.117647, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Won: 0"

[node name="BtnLogout" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
theme = ExtResource( 10 )
text = "logout"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="BtnMatchmaking" to="." method="_on_BtnMatchmaking_pressed"]
[connection signal="pressed" from="BtnMatchmaking/BtnPractice" to="." method="_on_BtnPractice_pressed"]
[connection signal="pressed" from="BtnEditor" to="." method="_on_BtnEditor_pressed"]
[connection signal="pressed" from="BtnLogout" to="." method="_on_BtnLogout_pressed"]
